Sort builds and pushes by created time
- Clean up dashboard controller to use repos instead of DQL

Fix HAL-43

--- a/app/di.pages.yml
+++ b/app/di.pages.yml
@@ -15,7 +15,9 @@ services:
       - @layout
       - @user
       - @permissions
-      - @doctrine.em
+      - @build.repo
+      - @push.repo
+      - @user.repo
   dashboard.twig:
     parent: 'twig.template'
     arguments: ['dashboard.twig']
@@ -557,7 +559,7 @@ services:
 
   admin.dashboard.page:
     parent: 'static.controller'
-    arguments: ['@admin.dashboard.twig']
+    arguments: [@admin.dashboard.twig]
   admin.dashboard.twig:
     parent: 'twig.template'
     arguments: ['admin/dashboard.twig']
