Move doctrine cache to .doctrine dir

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,9 @@ atlassian-ide-plugin.xml
 /.phpunit/
 /phpunit.xml
 
-# compiled assets / package installation / deployment
+# compiled assets / package installation
 /.bundle/
 /.sass-cache/
-/.twig/
 /bin/sass
 /bin/sass-convert
 /bin/scss
@@ -27,8 +26,9 @@ atlassian-ide-plugin.xml
 /configuration/config.env.yml
 /src/CachedContainer.php
 
-# doctrine cache
-/app/cache/*
+# deployment caches
+/.doctrine/
+/.twig/
 
 # misc
 /.vagrant
