Add predis and core redis servers to config

--- a/app/di.yml
+++ b/app/di.yml
@@ -239,6 +239,12 @@ services:
       - @cache
       - '%debug.godmode%'
 
+  redis:
+    class: 'Predis\Client'
+    arguments:
+      - %redis.server%
+      - {prefix: '%redis.prefix%:'}
+
   ######################################################################################################################
   # API Helpers
   ######################################################################################################################
