--- a/app/environment/test.yml
+++ b/app/environment/test.yml
@@ -13,3 +13,6 @@ parameters:
     github.baseurl: 'http://git/api/v3/'
 
     logger.mcp.host: 'http://qlsonictest:2581/web/core/logentries'
+
+    redis.server: 'test.example.com:6379'
+    redis.prefix: 'hal9000test'
