--- a/app/environment/prod.yml
+++ b/app/environment/prod.yml
@@ -13,3 +13,6 @@ parameters:
     github.baseurl: 'http://git/api/v3/'
 
     logger.mcp.host: 'http://qlsonicprod:2581/web/core/logentries'
+
+    redis.server: 'prod.example.com:6379'
+    redis.prefix: 'hal9000'
